[package]
name = "hocon"
version = "0.5.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
description = "Reads HOCON configuration files"
repository = "https://github.com/mockersf/hocon.rs"
homepage = "https://github.com/mockersf/hocon.rs"
documentation = "https://docs.rs/hocon"
keywords = ["hocon", "configuration"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "mockersf/hocon.rs" }

[dependencies]
thiserror = "1.0.*"
nom = "4.2"
serde = { version = "1.0", optional = true }
java-properties = "1.3"
memchr = "2.3"
reqwest = { version = "0.11", optional = true, features = [ "blocking" ] }
uuid = { version = "0.8", features = [ "v4" ] }
serde_path_to_error = "0.1"

[dev-dependencies]
test-generator = "0.3"
insta = "1.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
criterion = "0.3"
rand = "0.8"
cargo-husky = { version = "1", features = [ "run-cargo-clippy", "run-cargo-fmt" ] }

[features]
default = [ "test-snapshot", "serde-support", "url-support" ]
test-snapshot = []
serde-support = [ "serde" ]
url-support = [ "reqwest" ]

[[bench]]
name = "parse"
harness = false
